fixed select being too large

--- a/hh/templates/css/main.css
+++ b/hh/templates/css/main.css
@@ -1803,6 +1803,8 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: none;
   width: 100%;
   padding: 10px 0 10px 0px;
+  max-height: 200px;
+  overflow-y: scroll !important;
 }
 
 .default-select .nice-select .list .option {
